2020-06-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* richtext/richtextmeta.C: Implement three-way comparison for
	richtextmeta.

2020-06-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/impl/element.H: rework the label hotpost logic to
	avoid creating hotspot links with a spurious trailing \0.

2020-06-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix rendering of modal shade color.

0.28

2020-05-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update the API to the C++20 revision.

	* Optimize container recalculation. Layout managers' destructor
	schedules container recalculation only when needed.

	* combo-boxes: fix resort_items().

	* pane layout manager: removing the only pane resulted in bad
	contents of the layout manager.

0.27

2020-05-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/dim_arg.H: gcc 10 update.

2020-05-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager: Home/End in a list navigation.

2020-05-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/shortcut.H: Improve shortcut labeling.

	* listlayoutmanager/list_element_impl.C: Rename get_item_layoutmanager()
	to submenu_listlayout(), for consistency.

2020-04-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* shortcut.C: Recognize "Enter" as a shortcut.

	* combo-box: more intelligent reporting on whether the Enter
	key did something, in a combo-box.

	* focusable_label: autofocus by default, so standard combo-boxes
	in new dialogs get input focus by default.

2020-04-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* container-><name>layout(): get_layoutmanager() shortcuts for all
	individual layout managers.

2020-04-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager/list_element_impl.C: keyboard navigation generates
	fake motion events so that menu popups appear on top of the current
	list item.

	* docbook/uixmldoc.xml: Optional id of <context> popups.

2020-04-05  Sam Varshavchik  <mrsam@courier-mta.com>
