@@ -140,8 +140,6 @@ void testdateinput()
 int main(int argc, char **argv)
 {
 	try {
-		LIBCXX_NAMESPACE::locale::base::environment()->global();
-
 		LIBCXX_NAMESPACE::property
 			::load_property(LIBCXX_NAMESPACE_STR "::themes",
 					"themes", true, true);
